<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Cosmic IDE</string>

    <string name="disassemble" translatable="false">Disassemble</string>
    <string name="class2java" translatable="false">Class2Java</string>
    <string name="jar2dex" translatable="false">Jar2Dex</string>

    <string name="advanced">Advanced</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>

    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="quit">Quit</string>
    <string name="copy_stacktrace">Copy stacktrace</string>

    <string name="editor_action_undo">Undo</string>
    <string name="editor_action_redo">Redo</string>
    <string name="editor_action_format">Format</string>

    <string name="menu_close_file">Close</string>
    <string name="menu_close_others">Close others</string>
    <string name="menu_close_all">Close all</string>

    <string name="compile">Compile</string>
    <string name="error">Error</string>
    <string name="project">Project</string>
    <string name="folder">Folder</string>

    <string name="no_open_file_title">There are no open files</string>
    <string name="no_open_file_desc">Try opening the file through the left menu.</string>
    <string name="no_projects_title">Projects not found</string>
    <string name="no_projects_suggestion">Create a project by clicking on the button below.</string>

    <string name="treemenu_create_kotlin">Create Kotlin class</string>
    <string name="treemenu_create_java">Create Java class</string>
    <string name="treemenu_create_folder">Create folder</string>

    <string name="create_folder_dialog_title">Create a folder</string>
    <string name="create_folder_dialog_class_name">Folder name</string>
    <string name="create_folder_dialog_positive">Create</string>
    <string name="create_folder_dialog_invalid_name">Invalid folder name</string>

    <string name="create_class_dialog_title">Create a class</string>
    <string name="create_class_dialog_class_name">Class name</string>
    <string name="create_class_dialog_positive">Create</string>
    <string name="create_class_dialog_class_type">Class type</string>
    <string name="create_class_dialog_invalid_name">Invalid class name</string>
    <string name="rename_file">Rename File</string>

    <string name="select_smali_class">Choose a smali class to show</string>
    <string name="select_class_decompile">Select class to decompile</string>
    <string name="select_class_disassemble">Select class to disassemble</string>
    <string name="select_class_run">Choose a class to run</string>

    <string name="error_file_open">Failed to open file</string>
    <string name="error_file_unzip">Failed to unzip file</string>
    <string name="error_file_extract_smali">Failed to extract smali source code</string>
    <string name="error_class_decompile">Failed to decompile class</string>
    <string name="error_class_disassemble">Failed to disassemble class</string>
    <string name="error_classes_get_dex">Failed to get list of classes in dex</string>

    <!-- Compiler Service -->
    <string name="compilation_state_compiling">Compiling</string>
    <string name="compilation_result_success">Compilation success</string>
    <string name="compilation_result_failed">Compilation failed</string>
    <string name="compilation_stage">Stage</string>
    <string name="compilation_console" translatable="false">Console</string>
    <string name="compilation_recompile" translatable="false">Recompile</string>
    <string name="compilation_stage_clean">Cleaning build&#8230;</string>
    <string name="compilation_stage_kotlinc">Compiling with Kotlinc&#8230;</string>
    <string name="compilation_stage_javac">Compiling with Javac&#8230;</string>
    <string name="compilation_stage_d8">Dexing class files with D8&#8230;</string>

    <string name="console_state_running">Running</string>
    <string name="console_state_stopped">Stopped</string>

    <string name="success">Success</string>
    <string name="delete_success">Delete success.</string>
    <string name="dialog_confirm_delete">Are you sure you want to delete %1$s?</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_close">Close</string>

    <string name="logcat">Logcat</string>
    <string name="create_project">Create project</string>
    <string name="project_not_compiled">Compile the project first</string>
    <string name="project_name">Project name</string>
    <string name="package_name">Package name</string>
    <string name="use_kotlin_template">Use Kotlin Template</string>
    <string name="use_git">Git</string>

    <string name="java_version">Java Version</string>
    <string name="program_arguments">Program Arguments</string>
    <string name="settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="fast_jar_fs">Fast Jar File System</string>
    <string name="fast_jar_fs_desc">[Experimental] Improves build speed</string>
    <string name="compiler">Compiler</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="discord">Discord</string> 
    <string name="discord_desc">Join our discord channel</string>
    <string name="github">Github</string>
    <string name="github_desc">View our github repository</string>
    <string name="app_version">Version %s</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="follow_system">Follow System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="app_translation">Translation</string>
    <string name="app_translation_desc">Translate this app</string>
    <string name="dynamic_theme">Dynamic theme</string>
    <string name="dynamic_theme_desc">Applies a theme created on the color scheme of your wallpaper</string>
    <string name="editor">Editor</string>
    <string name="font_size">Font size</string>

    <string name="git">Git</string>
    <string name="git_username">Username</string>
    <string name="git_useremail">Email address</string>
    <string name="git_new_repository">New Git repository</string>
    <string name="git_commit">Commit</string>
    <string name="git_commit_message">Commit message</string>
    <string name="git_branch">Branch</string>
    <string name="git_new_branch">New branch</string>
    <string name="git_name_branch">Branch name</string>
    <string name="git_merge">Merge</string>
    <string name="git_merge_branch">Merge branch</string>
    <string name="git_merge_branch_message">Branch name to merge</string>
    <string name="git_delete_branch">Delete branch</string>
    <string name="git_delete_branch_message">Branch name to delete</string>
    <string name="git_log_unavailable">Logs not available.</string>
    <string name="allowed_characters">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="expand">expand</string>
    <string name="file_icon">File icon</string>
    <string name="group_id">Group Id</string>
    <string name="artifact_id">Artifact Id</string>
    <string name="version">Version</string>
    <string name="library_downloader">Library Downloader</string>
    <string name="import_project">Import Project</string>

</resources>