<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res-auto">

    <PreferenceScreen
        android:fragment="org.cosmic.ide.fragment.settings.AppearanceSettingsFragment"
        android:key="appearance"
        android:title="@string/appearance" />

    <PreferenceScreen
        android:fragment="org.cosmic.ide.fragment.settings.CompilerSettingsFragment"
        android:key="compiler"
        android:title="@string/compiler" />

    <PreferenceScreen
        android:fragment="org.cosmic.ide.fragment.settings.EditorSettingsFragment"
        android:key="editor"
        android:title="@string/editor" />

    <PreferenceScreen
        android:fragment="org.cosmic.ide.fragment.settings.AboutSettingsFragment"
        android:key="about"
        android:title="@string/about" />

</PreferenceScreen>